@@ -1,5 +1,9 @@
 This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.
 
+2003-01-06 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
+	* src/RemoteSyslogAppender.cpp: fixed handling of large messages and
+	buffer deallocation in _append() as reported by Benety Goh.
+	
 2002-11-29 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
 	* log4cpp.spec.in: install HTML documentation in
 	/var/www/html/manual/log4cpp.
